<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:slideswitch="http://schemas.android.com/apk/res-auto"
    xmlns:toggle="http://schemas.android.com/apk/res-auto"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addr_edit_rl"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows = "true"
    android:background="@color/app_mainback">
    <com.thlh.jhmjmw.view.HeaderNormal
        android:id="@+id/addr_edit_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:title="@string/addr_edit_header_name"/>
    <!-- 收货人姓名-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y80"
        style="@style/normal_info_layout"
        android:background="@color/white"
        android:layout_marginTop="@dimen/y10"
        android:layout_marginBottom="@dimen/y10">
        <ImageView
            android:layout_width="@dimen/icon_pxsize_x"
            android:layout_height="@dimen/icon_pxsize_y"
            android:layout_marginRight="@dimen/x10"
            android:src="@drawable/icon_address_avatar" />
        <TextView
            android:layout_width="@dimen/x150"
            android:layout_height="wrap_content"
            android:textSize="@dimen/y28"
            android:textColor="@color/text_nomal"
            android:text="@string/addr_edit_name"/>
        <EditText
            android:id="@+id/addr_edit_name_et"
            android:hint="收货人姓名"
            android:maxLines="1"
            android:maxLength="14"
            style="@style/addr_edit_et"/>
    </LinearLayout>
    <!-- 详细地址-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y120"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/x20"
        android:paddingRight="@dimen/x20"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginRight="@dimen/x10"
        android:layout_marginBottom="@dimen/y10"
        android:background="@drawable/shap_radius_white">
        <ImageView
            android:layout_width="@dimen/icon_pxsize_x"
            android:layout_height="@dimen/icon_pxsize_y"
            android:layout_marginRight="@dimen/x10"
            android:src="@drawable/icon_address_other"/>
        <TextView
            android:layout_width="@dimen/x150"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small_xx"
            android:textColor="@color/text_nomal"
            android:text="@string/addr_edit_addr"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/addr_edit_location_ll"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y60"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/addr_edit_location_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small_xx"
                    android:textColor="@color/text_nomal"
                    android:layout_weight="1"
                    android:textColorHint="@color/text_tips"
                    android:hint="请选择所在地区"/>
            </LinearLayout>
            <View style="@style/divide_line_horizontal_match_mianback" />
            <LinearLayout
                android:id="@+id/addr_edit_map_ll"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y58"
                android:gravity="center_vertical">
                <EditText
                    android:id="@+id/addr_edit_addr_et"
                    android:hint="请输入详细地址"
                    style="@style/addr_edit_et"/>

                <ImageView
                    android:id="@+id/addr_edit_map_iv"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_marginLeft="@dimen/addr_edit_margin_side"
                    android:layout_marginRight="@dimen/addr_edit_margin_side"
                    android:src="@drawable/icon_address_loction"/>
            </LinearLayout>
            <!-- 获得详细地址-->

            </LinearLayout>
    </LinearLayout>

    <!-- 联系电话-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y80"
        style="@style/normal_info_layout"
        android:layout_marginBottom="@dimen/y10">
        <ImageView
            android:layout_width="@dimen/icon_pxsize_x"
            android:layout_height="@dimen/icon_pxsize_y"
            android:layout_marginRight="@dimen/x10"
            android:src="@drawable/icon_address_phone"/>
        <TextView
            android:layout_width="@dimen/x150"
            android:layout_height="wrap_content"
            android:textSize="@dimen/y28"
            android:textColor="@color/text_nomal"
            android:text="@string/addr_edit_phone"/>
        <EditText
            android:id="@+id/addr_edit_phone_et"
            android:hint="联系电话"
            style="@style/addr_edit_et"
            android:inputType="phone"
            android:maxLength="11"/>
    </LinearLayout>
    <View style="@style/divide_line_horizontal_match_mianback" />
    <!-- 是否为常用-->
    <LinearLayout
        android:id="@+id/addr_edit_states_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y80"
        style="@style/normal_info_layout">
        <ImageView
            android:layout_width="@dimen/icon_pxsize_x"
            android:layout_height="@dimen/icon_pxsize_y"
            android:layout_marginRight="@dimen/x10"
            android:src="@drawable/icon_address_lock"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/y25"
            android:textColor="@color/text_nomal"
            android:text="@string/addr_edit_states"/>
        <com.thlh.viewlib.togglebutton.ToggleButton
            android:id="@+id/addr_edit_states_btn"
            android:layout_width="35dp"
            android:layout_height="17dp"
            android:layout_marginRight="@dimen/addr_edit_margin_side"
            toggle:isDefaultOn="false"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <com.thlh.viewlib.ripple.RippleRelativeLayout
        android:id="@+id/addr_edit_rip"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y90"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/selector_theme"
        android:layout_marginTop="@dimen/setting_margin_top"
        ripple:ripColor="@color/white">
        <TextView
            android:id="@+id/addr_edit_submit_tv"
            android:text="@string/addr_edit_save"
            android:textColor="@color/white"
            android:textSize="@dimen/login_edit_text_size"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
    </com.thlh.viewlib.ripple.RippleRelativeLayout>

</LinearLayout>