<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows = "true"
    android:background="@color/app_mainback">

    <com.thlh.jhmjmw.view.HeaderNormal
        android:id="@+id/changepw_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:title="@string/changepw_login_header_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y120"
        android:layout_marginLeft="@dimen/x80"
        android:layout_marginRight="@dimen/x80"
        android:background="@drawable/shap_framentdialog_radius_white"
        android:orientation="vertical">

        <!--标题-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y80">
            <ImageView
                android:layout_centerInParent="true"
                android:layout_width="@dimen/x60"
                android:layout_height="@dimen/y60"
                android:src="@drawable/img_dialog_key"/>
            <ImageView
                android:layout_width="@dimen/x45"
                android:layout_height="@dimen/y45"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/icon_dialog_cancel"
                android:layout_marginRight="@dimen/x30"
                android:visibility="gone"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/y2"
            android:background="@color/app_mainback"
            android:layout_marginTop="@dimen/y10"
            android:layout_marginBottom="@dimen/y10"/>
        <!--旧密码-->
        <LinearLayout
            android:id="@+id/changepw_input_oldpw_ll"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y100"
            android:orientation="horizontal"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginLeft="@dimen/x25"
            android:layout_marginRight="@dimen/x25"
            android:background="@drawable/shap_stroke_grayshallow_r50"
            android:layout_marginTop="@dimen/y20">
            <EditText
                android:id="@+id/changepw_input_oldpw_et"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                style="@style/login_edit_text_v3"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/x50"
                android:hint="@string/changepw_input_oldpw_title" />
        </LinearLayout>

        <!--新密码-->
        <LinearLayout
            android:id="@+id/changepw_input_newpw_ll"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y100"
            android:orientation="horizontal"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginLeft="@dimen/x25"
            android:layout_marginRight="@dimen/x25"
            android:background="@drawable/shap_stroke_grayshallow_r50"
            android:layout_marginTop="@dimen/y20">
            <EditText
                android:id="@+id/changepw_input_newpw_et"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                style="@style/login_edit_text_v3"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/x50"
                android:hint="@string/changepw_input_newpw_hint" />
        </LinearLayout>
        <TextView
            android:id="@+id/changepw_hint_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x100"
            android:layout_marginRight="@dimen/x100"
            android:layout_marginTop="@dimen/y20"
            android:textSize="@dimen/y25"
            android:textColor="@color/text_tips"
            android:text="密码长度6-20位字符组成，包含数字、字母。区分大小写，不含有特殊符号。" />
        <LinearLayout
            android:id="@+id/changepw_confirm_newpw_ll"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y100"
            android:orientation="horizontal"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginLeft="@dimen/x25"
            android:layout_marginRight="@dimen/x25"
            android:background="@drawable/shap_stroke_grayshallow_r50"
            android:layout_marginTop="@dimen/y20">
            <EditText
                android:id="@+id/changepw_confirm_newpw_et"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                style="@style/login_edit_text_v3"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/x50"
                android:hint="@string/changepw_confirm_newpw_title" />
        </LinearLayout>

        <com.thlh.viewlib.ripple.RippleRelativeLayout
            android:id="@+id/changepw_next_rip"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y100"
            android:layout_marginLeft="@dimen/x25"
            android:layout_marginRight="@dimen/x25"
            android:orientation="horizontal"
            android:background="@drawable/selector_stoke_mainback_r50"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="@dimen/y20"
            android:layout_marginBottom="@dimen/y20">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="返回"
                android:textSize="@dimen/y25"
                android:gravity="center"
                android:textColor="@color/wine_light" />
        </com.thlh.viewlib.ripple.RippleRelativeLayout>
    </LinearLayout>


</LinearLayout>
